projects/compiler/test/typechecker/invocation/error_instantiation_non_pub_field.out
Error at %FILE_NAME%:3:13
Illegal access for field 'a'
  |  val f = Foo(a: 123, b: "foo")
                 ^
Field 'a' is not marked as 'pub' within type 'Foo'
