projects/compiler/test/typechecker/invocation/error_instantiation_non_pub_field.abra
import Foo from "./_exports"

val f = Foo(a: 123, b: "foo")